# agentic-local-brain

./: .env.example  .gitignore  AGENTS.md  CHANGELOG-v0.8.3.md  CHANGELOG.md  CLAUDE.md  CONFIG_CLEANUP_SUMMARY.md  DEVELOPMENT_SUMMARY_0.8.1.md  FINAL_SUMMARY_0.8.1.md  MERGE_SUMMARY.md  QUICK_REFERENCE_0.8.1.md  README.md  README.zh-CN.md  README_zh.md  RELEASE_NOTES.md  RELEASE_NOTES_0.8.1.md  RELEASE_SUMMARY_0.8.1.md  config-template.yaml  localbrain.spec  pyproject.toml  requirements.txt
docs/: 2026-03-24-knowledge-base-design.md  2026-04-05-v0.6-knowledge-mining-design.md  CONFIG_TEMPLATE.md  DOCUMENTATION_ORGANIZATION_REPORT.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  FRONTEND_ARCHITECTURE.md  MODEL_SERVICE_TEST_REPORT.md  README.md  TEST_DATA_SUMMARY.md  TODOS.md  article-two-weekends-ai-team.md  backup-feature-design.md
examples/: usage_bookmark_collector.py  usage_file_collector.py  usage_webpage_collector.py
kb/: __init__.py  cli.py  config-template.yaml  config.py  self_update.py  version.py
scripts/: build_binary.py  build_release.py  build_wheel.py  local-build-release.sh  organize-docs.sh
tests/: cleanup_and_add_webpage_data.py  cleanup_duplicate_webpages.py  collect_all_test_data_via_cli.py  complete_test_data_collection.py  generate_comprehensive_test_data.py  generate_pagination_test_data.py  generate_test_data.py  process_knowledge_items.py  test_bookmark_collector.py  test_chroma_storage.py  test_chunker.py  test_cli_test_commands.py  test_cli_web.py  test_config_compatibility.py  test_config_update.py  test_cross_doc_relations.py  test_doctor.py  test_email_collector.py  test_embedder.py  test_embedding_consistency.py  test_file_collector.py  test_integration_install.py  test_knowledge_graph.py  test_mining.py  test_model_services_integration.py  test_ollama_embedding_fix.py  test_pageindex.py  test_paper_collector.py  test_pipeline_cache.py  test_recommendation.py  test_retrieval_pipeline.py  test_self_update.py  test_self_update_command.py  test_sqlite_storage.py  test_tag_extractor.py  test_topic_clustering.py  test_version.py  (+3 more)
(+130 files in other folders)
